kubernetes/staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-app
  namespace: pixeltranslate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-app
  template:
    metadata:
      labels:
        app: staging-app
    spec:
      containers:
        - name: app
          image: docker-private.averix.tech/pixeltranslate/app:$PLUGIN_MY_IMAGE_TAG
          imagePullPolicy: Always
          resources:
            limits:
              memory: '1G'
              cpu: '0.3'
---
apiVersion: v1
kind: Service
metadata:
  name: staging-app
  namespace: pixeltranslate
spec:
  selector:
    app: staging-app
  type: ClusterIP
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-app
  namespace: pixeltranslate
spec:
  ingressClassName: traefik
  rules:
    - host: "staging-app.pixeltranslate.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-app
                port:
                  number: 3000
